--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-hacker
 title: Sujith MS
 description: Fourth year student at IISER Pune.
+
+owner: [Your name]
+year: [Current Year]
