--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-hacker
 title: Sujith MS
-description: Fourth year student at IISER Pune.
+description: Fourth year BS MS student at IISER Pune.
 github:
   is_project_page: false
