--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
 title: Sujith MS
 description: Fourth year BS MS student at IISER Pune.
 github:
