--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-midnight
-title: Sujith M S
+title: [Sujith M S](/home)
 description: Fourth year BS MS student at IISER Pune.
 github: 
   is_project_page: false
