--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-slate
 title: Sujith M S
 description: Fourth year BS MS student at IISER Pune.
 github: 
