--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 theme: jekyll-theme-cayman
 title: Sujith M S
-description: Fourth year BS MS student at IISER Pune.
+description: 
+Lab No. 5, Mendeleev
+[Indian Institute of Science Education and Research (IISER), Pune](https://www.iiserpune.ac.in/)	
+Fourth year BS MS student
+Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra	
+INDIA - 411008	
 github: 
   is_project_page: false
