--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
 theme: jekyll-theme-cayman
 title: Sujith M S
-description: 
-Lab No. 5, Mendeleev
-[Indian Institute of Science Education and Research (IISER), Pune](https://www.iiserpune.ac.in/)	
-Fourth year BS MS student
-Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra	
-INDIA - 411008	
+description: Lab No. 5, Mendeleev, Fourth year BS MS student, [Indian Institute of Science Education and Research (IISER), Pune](https://www.iiserpune.ac.in/), Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra, INDIA - 411008	
 github: 
   is_project_page: false
