Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
 title: Sujith M S
 description: Lab No. 5, Mendeleev, Fourth year BS MS student, [Indian Institute of Science Education and Research (IISER), Pune](https://www.iiserpune.ac.in/), Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra, INDIA - 411008	
 github: 
