--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-midnight
 title: Sujith M S
-description: Lab No. 5, Mendeleev, Fourth year BS MS student, [Indian Institute of Science Education and Research (IISER), Pune](https://www.iiserpune.ac.in/), Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra, INDIA - 411008	
+description: Lab No. 5, Mendeleev, Fourth year BS MS student, Indian Institute of Science Education and Research (IISER), Pune, Dr. Homi Bhabha Road, Pashan, Pune, Maharashtra, INDIA - 411008	
 github: 
-  is_project_page: false
+is_project_page: false
