--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 github: 
   is_project_page: false
 theme: jekyll-theme-midnight
-title: 
-description: 
+title: Sujith M S
+description: IISER Pune
 
