Set theme jekyll-theme-hacker

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 github: 
   is_project_page: false
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
 title: Sujith M S
 description: IISER Pune
 
